# slack-rtm-state

./: README.md  slack-rtm-state.cabal  stack.yaml
src/Network/RTM/Slack/: Instances.hs  State.hs
src/Network/RTM/Slack/State/: Update.hs
