name:                slack-rtm-state
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CthulhuDen/slack-rtm-state#readme
license:             BSD3
license-file:        LICENSE
author:              Cthulhu
maintainer:          cthulhu.den@gmail.com
copyright:           2017 Cthulhu
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Network.RTM.Slack.State
                       Network.RTM.Slack.State.Update
  other-modules:       Network.RTM.Slack.Instances
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , slack-api
                     , binary
                     , time
                     , aeson
                     , lens

source-repository head
  type:     git
  location: https://github.com/CthulhuDen/slack-rtm-state
